# mecanumbot_remote

./: README.md
mecanumbot_ledgui/: README.md  package.xml  setup.cfg  setup.py
mecanumbot_ledgui/configs/: led_configs.json
mecanumbot_ledgui/launch/: mecanumbot_ledgui.launch.py
mecanumbot_ledgui/mecanumbot_ledgui/: mecanumbot_ledgui.py
mecanumbot_sensorprocess_smart/: README.md  setup.py
mecanumbot_sensorprocess_smart/config/: lidar_peopledetect_config.yaml
mecanumbot_sensorprocess_smart/launch/: mecanumbot_peopledetect.launch.py
mecanumbot_sensorprocess_smart/mecanumbot_sensorprocess_smart/: mecanumbot_lidar_detect_people.py
mecanumbot_sensorprocess_smart/param/: lidar_peopledetect_config.yaml
mecanumbot_teleop/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
mecanumbot_teleop/launch/: launch_joy_teleop.launch.py
mecanumbot_teleop/mecanumbot_teleop/script/: teleop_joystick.py  teleop_keyboard.py
