<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanumbot_teleop</name>
  <version>2.3.3</version>
  <description>
    Teleoperation node using keyboard for Mecanumbot.
  </description>
  <maintainer email="fortuz19@gmail.com">fortuz</maintainer>
  <license>Apache 2.0</license>
  <build_depend>mecanumbot_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mecanumbot_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
